--- a/Passepartout/AppShared/en.lproj/Localizable.strings
+++ b/Passepartout/AppShared/en.lproj/Localizable.strings
@@ -54,6 +54,9 @@
 "global.messages.email_not_configured" = "No e-mail account is configured.";
 "global.messages.share" = "Passepartout is a user-friendly, open source OpenVPN / WireGuard client for iOS and macOS";
 
+"global.alerts.buttons.remind" = "Remind me later";
+"global.alerts.buttons.never" = "Don't ask again";
+
 "global.placeholders.profile_name" = "My profile";
 
 "global.errors.missing_profile" = "Missing profile";
@@ -76,6 +79,7 @@
 "menu.contextual.share_generic" = "Invite";
 
 "menu.system.quit.title" = "Quit %@";
+"menu.system.quit.messages.confirm" = "The VPN, if enabled, will still run in the background. Do you want to quit?";
 
 /* MARK: TunnelKit */
 
@@ -113,8 +117,6 @@
 
 "organizer.alerts.reddit.message" = "Did you know that Passepartout has a subreddit? Subscribe for updates or to discuss issues, features, new platforms or whatever you like.\n\nIt's also a great way to show you care about this project.";
 "organizer.alerts.reddit.buttons.subscribe" = "Subscribe now!";
-"organizer.alerts.reddit.buttons.remind" = "Remind me later";
-"organizer.alerts.reddit.buttons.never" = "Don't ask again";
 
 "organizer.alerts.remove_profile.message" = "Are you sure you want to delete profile %@?";
 
