--- a/Passepartout/AppShared/fr.lproj/Localizable.strings
+++ b/Passepartout/AppShared/fr.lproj/Localizable.strings
@@ -79,6 +79,7 @@
 "menu.contextual.share_generic" = "Inviter";
 
 "menu.system.quit.title" = "Quitter %@";
+"menu.system.quit.messages.confirm" = "S'il est activé, le VPN fonctionnera en tâche de fond. Voulez-vous quitter ?";
 
 /* MARK: TunnelKit */
 
